# Inua360-The-Kenyan-SME-AI-Agent

./: .gitignore  ENHANCEMENTS.md  HOW_TO_RUN.md  Makefile  QUICK_START.md  README.md  README_DASHBOARD.md  README_ML.md  STARTUP_GUIDE.md  app.py  dashboard_config.py  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  start.py  start.sh  start_dashboard.bat  start_dashboard.sh  test_sme_data.json
.streamlit/: secrets.toml
agent/: urls.py
compliance/: admin.py  models.py  serializers.py  urls.py  views.py
compliance/migrations/: 0001_initial.py  0002_compliancechecker_business_registration_certificate_and_more.py  0002_compliancechecker_compliance_score_and_more.py
data/: african_sme_digital_transformation.csv
data/interim/: funding_train.csv  new_smes_data.csv
data/processed/: Clean_data.csv  african_sme_dataset.csv  funding_test.csv  funding_train.csv  growth_predictions.csv  growth_test.csv  growth_train.csv  predicted_growth.csv  risk_test.csv  risk_train.csv  sme_revenue_growth_synthetic_processed.csv
docs/: mkdocs.yml
finance/: admin.py  models.py  urls.py
inua360/: asgi.py  settings.py  urls.py  wsgi.py
inua360_the_kenyan_sme_ai_agent/: __init__.py  config.py  data_cleaning.py  features.py  plots.py
models/: Best_model  best_compliance_risk_level_model.pkl  best_funding_model.pkl  compliance_features.pkl  funding_features.pkl  growth_features.pkl  growth_model.pkl
notebooks/: EDA.ipynb  feature_engineering.ipynb  feature_engineering_growth.ipynb
sme/: admin.py  models.py  serializers.py  urls.py  views.py
(+22 files in other folders)
