[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "inua360_the_kenyan_sme_ai_agent"
version = "0.0.1"
description = "AI-powered analytics and recommendation system for Kenyan SMEs"
authors = [
  { name = "Abby" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["inua360_the_kenyan_sme_ai_agent"]
include = ["pyproject.toml", "inua360_the_kenyan_sme_ai_agent/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["inua360_the_kenyan_sme_ai_agent"]
force-sort-within-sections = true

